--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,81 +72,106 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ScrollView
-                android:id="@+id/event_textScroll"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="230dp">
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ScrollView
+                    android:id="@+id/event_textScroll"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:text="@string/test_scrollText"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+                </ScrollView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView"
+                    <Button
+                        android:id="@+id/button1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="@string/test_scrollText"
-                        android:textSize="12sp" />
+                        android:layout_height="40dp"
+                        android:background="@drawable/outline_background"
+                        android:backgroundTint="#D86C6C"
+                        android:backgroundTintMode="screen"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:onClick="button1Click"
+                        android:text="answer1"
+                        android:textSize="14sp" />
 
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@drawable/outline_background"
+                        android:backgroundTint="#D86C6C"
+                        android:backgroundTintMode="screen"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:onClick="button1Click"
+                        android:text="answer1" />
                 </LinearLayout>
-            </ScrollView>
 
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/outline_background"
-                android:backgroundTint="#D86C6C"
-                android:backgroundTintMode="screen"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:onClick="button1Click"
-                android:text="answer1"
-                android:textSize="14sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/outline_background"
-                android:backgroundTint="#D86C6C"
-                android:backgroundTintMode="screen"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:onClick="button1Click"
-                android:padding="4dp"
-                android:text="Азбука морзе для лохов, и я блять личность НАХУЙ Я АГОНЬ"
-                android:textSize="10sp" />
+                    <Button
+                        android:id="@+id/button2"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@drawable/outline_background"
+                        android:backgroundTint="#D86C6C"
+                        android:backgroundTintMode="screen"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:onClick="button1Click"
+                        android:padding="4dp"
+                        android:text="Азбука морзе для лохов, и я блять личность НАХУЙ Я АГОНЬ"
+                        android:textSize="10sp" />
 
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/outline_background"
-                android:backgroundTint="#D86C6C"
-                android:backgroundTintMode="screen"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:onClick="button1Click"
-                android:text="answer1" />
+                    <Button
+                        android:id="@+id/button4"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@drawable/outline_background"
+                        android:backgroundTint="#D86C6C"
+                        android:backgroundTintMode="screen"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:onClick="button1Click"
+                        android:text="answer1" />
+                </LinearLayout>
 
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/outline_background"
-                android:backgroundTint="#D86C6C"
-                android:backgroundTintMode="screen"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:onClick="button1Click"
-                android:text="answer1" />
+            </LinearLayout>
 
         </LinearLayout>
 
