--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -49,6 +49,7 @@
             android:orientation="horizontal">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/shop_store"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
