--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/podlojka">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_panel"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#66212121"
+        android:background="@drawable/up_bar"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/mid_panel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,27 +20,33 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/arrow_down_float" />
+            android:layout_margin="2dp"
+            android:src="@drawable/stat_pikchi"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_width="276dp"
+            android:layout_height="32dp"
             android:max="100"
-            android:progress="0" />
+            android:progress="0"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/arrow_up_float" />
-    </LinearLayout>
+            android:layout_margin="2dp"
+            android:src="@drawable/stat_pikchi_2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mid_panel"
@@ -76,6 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/events"
                 android:orientation="vertical">
 
                 <ScrollView
@@ -116,7 +124,7 @@
                         android:id="@+id/button1"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/outline_background"
+                        android:background="@drawable/butt"
                         android:backgroundTint="#D86C6C"
                         android:backgroundTintMode="screen"
                         android:clickable="true"
@@ -129,7 +137,7 @@
                         android:id="@+id/button3"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/outline_background"
+                        android:background="@drawable/butt"
                         android:backgroundTint="#D86C6C"
                         android:backgroundTintMode="screen"
                         android:clickable="true"
@@ -148,7 +156,7 @@
                         android:id="@+id/button2"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/outline_background"
+                        android:background="@drawable/butt"
                         android:backgroundTint="#D86C6C"
                         android:backgroundTintMode="screen"
                         android:clickable="true"
@@ -162,7 +170,7 @@
                         android:id="@+id/button4"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/outline_background"
+                        android:background="@drawable/butt"
                         android:backgroundTint="#D86C6C"
                         android:backgroundTintMode="screen"
                         android:clickable="true"
@@ -181,7 +189,7 @@
             android:layout_height="282dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="#66212121"
+            android:background="@drawable/map"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_stats" />
 
@@ -215,18 +223,18 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:background="#66212121"
+            android:background="@drawable/example"
             app:layout_constraintEnd_toStartOf="@+id/view_events"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <pl.droidsonroids.gif.GifImageView
             android:id="@+id/gifImageView"
-            android:layout_width="157dp"
-            android:layout_height="249dp"
+            android:layout_width="156dp"
+            android:layout_height="250dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/test"
+            android:src="@drawable/bonefire"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -236,6 +244,7 @@
             android:layout_height="92dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:background="@drawable/stat1"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gifImageView">
