--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/events"
+                android:background="@drawable/chat"
                 android:orientation="vertical">
 
                 <ScrollView
@@ -102,6 +102,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:text="@string/test_scrollText"
+                            android:textColor="#fff"
                             android:textSize="12sp" />
 
                     </LinearLayout>
@@ -244,7 +245,7 @@
             android:layout_height="92dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/stat1"
+            android:background="@drawable/stati"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gifImageView">
@@ -259,13 +260,23 @@
 
         </LinearLayout>
 
+<!--        <View-->
+<!--            android:id="@+id/view_invmag"-->
+<!--            android:layout_width="180dp"-->
+<!--            android:layout_height="210dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/view_map"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/layout_events"-->
+<!--            android:background="@drawable/magaz_invent"/>-->
+
         <FrameLayout
             android:id="@+id/layout_inventory"
             android:layout_width="180dp"
             android:layout_height="210dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:background="#66212121"
+            android:background="@drawable/magaz_invent"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_events">
@@ -283,14 +294,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="invisible"
-                tools:layout="@layout/fragment_shop" />
+                tools:layout="@layout/fragment_shop"
+                android:layout_margin="3dp"/>
 
             <fragment
                 android:id="@+id/fragmentInventory"
                 android:name="com.artelsv.sashaitschool.fragments.Inventory"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:layout="@layout/fragment_inventory" />
+                tools:layout="@layout/fragment_inventory"
+                android:layout_margin="3dp"/>
+
         </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
