--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -20,35 +20,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="16dp"
                 android:layout_weight="1"
-
+                android:textColor="#fff"
                 android:text="Stats"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:layout_marginBottom="3dp"/>
 
             <TextView
                 android:id="@+id/textCoin"
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="20dp"
                 android:layout_weight="1"
-                android:drawableLeft="@drawable/coin"
+                android:drawableLeft="@drawable/money"
+                android:textColor="#fff"
                 android:text="moneyCount"
                 android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textHp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/heart"
+                android:layout_height="20dp"
+                android:drawableLeft="@drawable/hp"
                 android:layout_weight="1"
                 android:text="hpCount"
+                android:textColor="#fff"
                 android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textPower"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/sword"
+                android:layout_height="20dp"
+                android:drawableLeft="@drawable/atack"
                 android:layout_weight="1"
                 android:text="powerCount"
+                android:textColor="#fff"
                 android:textAlignment="center" />
 
         </LinearLayout>
