--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,9 +125,8 @@
                         android:id="@+id/button1"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/butt"
-                        android:backgroundTint="#D86C6C"
-                        android:backgroundTintMode="screen"
+                        android:background="@drawable/button_event"
+                        android:textColor="#fff"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:onClick="button1Click"
@@ -138,9 +137,8 @@
                         android:id="@+id/button3"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/butt"
-                        android:backgroundTint="#D86C6C"
-                        android:backgroundTintMode="screen"
+                        android:background="@drawable/button_event"
+                        android:textColor="#fff"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:onClick="button1Click"
@@ -157,9 +155,8 @@
                         android:id="@+id/button2"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/butt"
-                        android:backgroundTint="#D86C6C"
-                        android:backgroundTintMode="screen"
+                        android:background="@drawable/button_event"
+                        android:textColor="#fff"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:onClick="button1Click"
@@ -171,9 +168,8 @@
                         android:id="@+id/button4"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/butt"
-                        android:backgroundTint="#D86C6C"
-                        android:backgroundTintMode="screen"
+                        android:background="@drawable/button_event"
+                        android:textColor="#fff"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:onClick="button1Click"
