--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -59,6 +59,8 @@
                     android:layout_height="wrap_content"
                     android:text="Item Name"
                     android:textColor="#fff"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,6 +68,8 @@
                     android:id="@+id/scrollView2"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3">
 
