--- a/app/src/main/res/layout/inventory_store_item.xml
+++ b/app/src/main/res/layout/inventory_store_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="47dp"
     android:layout_height="47dp"
-    android:padding="5dp">
+    android:padding="3dp">
 
     <ImageView
         android:id="@+id/info_text"
@@ -11,5 +11,12 @@
         android:layout_height="match_parent"
         android:background="@color/colorAccent"
         android:gravity="center"
-        app:srcCompat="@drawable/coin" />
+        app:srcCompat="@drawable/slot" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/mask_use" />
+
 </FrameLayout>
