--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -23,7 +23,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="button1Click"
-                android:src="@drawable/knopcka_ispolzovat" />
+                android:src="@drawable/refresh"
+                android:background="#0f2a3f"/>
 
             <TextView
                 android:id="@+id/textView2"
@@ -34,12 +35,11 @@
                 android:textAlignment="center"
                 android:textColor="#fff"/>
 
-            <ImageButton
+            <View
                 android:id="@+id/imageButton2"
                 android:layout_width="16dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/knopcka_ispolzovat" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
