--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -219,7 +219,7 @@
             android:layout_height="92dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="#66212121"
+            android:background="#08141e"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_eventPlayer" />
 
