--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -285,10 +285,11 @@
             android:id="@+id/layout_inventory"
             android:layout_width="180dp"
             android:layout_height="210dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/magaz_invent"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_map"
             app:layout_constraintTop_toBottomOf="@+id/layout_events">
