--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="128dp"
-        android:text="any click"
+        android:text="ГАТЬ"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
